[gd_scene load_steps=18 format=3 uid="uid://doj7qr6tw57i0"]

[ext_resource type="Texture2D" uid="uid://cykhetrvil23v" path="res://assets/wizard char.png" id="1_bcis6"]
[ext_resource type="Script" path="res://scenes/Characters/wizard.gd" id="1_k8p31"]
[ext_resource type="Texture2D" uid="uid://d17edwqeelfx8" path="res://assets/AnimationSheet_Character.png" id="2_cchmq"]
[ext_resource type="Texture2D" uid="uid://c341m8pc5yqt2" path="res://assets/01_Flat_Theme/Sprites/UI_Flat_BarFill01e.png" id="4_fr7gi"]
[ext_resource type="FontFile" uid="uid://dbjl1e6kdxpl6" path="res://assets/fonts/PixelOperator8.ttf" id="5_f2u60"]
[ext_resource type="PackedScene" uid="uid://43sc3jjy8c20" path="res://scenes/UI element/Button.tscn" id="6_af8vh"]
[ext_resource type="Script" path="res://scenes/Characters/answer.gd" id="6_c463f"]
[ext_resource type="Script" path="res://addons/virtual_joystick/virtual_joystick.gd" id="8_ahxsx"]
[ext_resource type="Texture2D" uid="uid://bm30au8mjfc2f" path="res://addons/virtual_joystick/textures/joystick_base_outline.png" id="9_x2syn"]
[ext_resource type="Texture2D" uid="uid://dt13r06u87fib" path="res://addons/virtual_joystick/textures/joystick_tip_arrows.png" id="10_u2kr0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yj28t"]
atlas = ExtResource("1_bcis6")
region = Rect2(10, 0, 44, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_xpsoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj28t")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4sora"]
atlas = ExtResource("2_cchmq")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibjx1"]
atlas = ExtResource("2_cchmq")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jpu42"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sora")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibjx1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wpdlf"]
radius = 4.0
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8lpuh"]
radius = 48.0

[node name="Wizard" type="CharacterBody2D" node_paths=PackedStringArray("selected_sprite")]
script = ExtResource("1_k8p31")
selected_sprite = [NodePath("gray_wizard"), NodePath("blue_wizard")]
sprite_index = 0

[node name="Virtual joystick left" type="Control" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -271.0
offset_top = 6.0
offset_right = -71.0
offset_bottom = 171.0
grow_vertical = 0
script = ExtResource("8_ahxsx")
visibility_mode = 2

[node name="Base" type="TextureRect" parent="Virtual joystick left"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -121.0
offset_right = 147.0
grow_vertical = 0
pivot_offset = Vector2(100, 100)
mouse_force_pass_scroll_events = false
texture = ExtResource("9_x2syn")
expand_mode = 3
stretch_mode = 5

[node name="Tip" type="TextureRect" parent="Virtual joystick left/Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture = ExtResource("10_u2kr0")
expand_mode = 3
stretch_mode = 5

[node name="gray_wizard" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.604857, 0.684195)
sprite_frames = SubResource("SpriteFrames_xpsoq")
animation = &"idle"
autoplay = "idle"

[node name="blue_wizard" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.646701, 0.736779)
sprite_frames = SubResource("SpriteFrames_jpu42")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_wpdlf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8lpuh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 37)
zoom = Vector2(2, 2)

[node name="Score" type="Label" parent="."]
offset_left = -272.0
offset_top = -116.0
offset_right = -217.0
offset_bottom = -93.0
theme_override_font_sizes/font_size = 10

[node name="Health" type="Label" parent="."]
offset_left = 238.0
offset_top = -116.0
offset_right = 281.0
offset_bottom = -93.0
theme_override_font_sizes/font_size = 10
text = "lives ? / ?"

[node name="question" type="Node2D" parent="."]

[node name="UiFlatBarFill01e" type="Sprite2D" parent="question"]
position = Vector2(-8, 128)
scale = Vector2(8.6875, 8)
texture = ExtResource("4_fr7gi")

[node name="Label" type="Label" parent="question"]
offset_left = -145.0
offset_top = 118.0
offset_right = 131.0
offset_bottom = 139.0
theme_override_fonts/font = ExtResource("5_f2u60")
text = "no question"
horizontal_alignment = 1
vertical_alignment = 1

[node name="answer A" parent="question" instance=ExtResource("6_af8vh")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 185.0
offset_top = 50.0
offset_right = 235.0
offset_bottom = 80.0
grow_horizontal = 1
grow_vertical = 1
text = "100"
script = ExtResource("6_c463f")

[node name="answer B" parent="question" instance=ExtResource("6_af8vh")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 233.0
offset_top = 87.0
offset_right = 283.0
offset_bottom = 117.0
grow_horizontal = 1
grow_vertical = 1
text = "100"
script = ExtResource("6_c463f")

[node name="answer C" parent="question" instance=ExtResource("6_af8vh")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 183.0
offset_top = 122.0
offset_right = 233.0
offset_bottom = 152.0
grow_horizontal = 1
grow_vertical = 1
text = "100"
script = ExtResource("6_c463f")

[node name="answer D" parent="question" instance=ExtResource("6_af8vh")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 141.0
offset_top = 85.0
offset_right = 191.0
offset_bottom = 115.0
grow_horizontal = 1
grow_vertical = 1
text = "100"
script = ExtResource("6_c463f")

[node name="MarginContainer" type="MarginContainer" parent="question"]
offset_left = 149.0
offset_top = 158.0
offset_right = 263.0
offset_bottom = 188.0
theme_override_constants/margin_left = 10

[node name="confirm" parent="question/MarginContainer" instance=ExtResource("6_af8vh")]
layout_mode = 2
text = "Confirm"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="question/MarginContainer/confirm" to="." method="_on_confirm_pressed"]
